Make sure sleep-for always delays for as long as it's told

* src/dispnew.c (Fsleep_for): Call wait_reading_process_output in
a loop, to ensure we always wait exactly the required amount of
time.  (Bug#15990)